--- a/advertiser_management/templates/advertiser_management/home_page.html
+++ b/advertiser_management/templates/advertiser_management/home_page.html
@@ -7,27 +7,28 @@
     <title>Ad View</title>
 </head>
 <body>
-<div class="container" dir="rtl">
+<div class="container" dir="ltr">
     {% for advertiser in advertisers_list %}
         <div class="card mt-2 p-2">
             <h5 class="card-title">{{ advertiser.name }}</h5>
             <div class="card-body">
                 <div class="row">
-		    {% for ad in advertiser.ad_set.all %}
-		        <div class="card col-md-2 p-0 mx-2">
-		            <a href="{% url 'detail' ad.id  %}">
-		                <img src="{{ ad.imgUrl }}"
-		                     class="card-img-top">
-		                <div class="card-body">
-		                    <span>{{ ad.title }}</span>
-		                </div>
-		            </a>
-		        </div>
-		    {% endfor %}
+                    {% for ad in advertiser.ad_set.all %}
+                        <div class="card col-md-2 p-0 mx-2">
+                            <a href="{% url 'detail' ad.id %}">
+                                <img src="{{ ad.imgUrl }}"
+                                     class="card-img-top">
+                                <div class="card-body">
+                                    <span>{{ ad.title }}</span>
+                                </div>
+                            </a>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
     {% endfor %}
 </div>
+<p style="text-align:center; margin-top: 15px; "><a style="text-align:center; color: #5E5694;" href="{% url 'createAd' %}">create new ad</a></p>
 </body>
 </html>
