--- a/advertiser_management/templates/advertiser_management/home_page.html
+++ b/advertiser_management/templates/advertiser_management/home_page.html
@@ -29,6 +29,8 @@
         </div>
     {% endfor %}
 </div>
-<p style="text-align:center; margin-top: 15px; "><a style="text-align:center; color: #5E5694;" href="{% url 'advertiser_management:createAd' %}">create new ad</a></p>
+<p style="text-align:center; margin-top: 15px; "><a style="text-align:center; color: #5E5694;"
+                                                    href="{% url 'advertiser_management:createAd' %}">create new ad</a>
+</p>
 </body>
 </html>
